fix error messages for nameless entries